# Steins-Gate-Clock

./: CMakeLists.txt  README.md
src/: clock.cpp  clock.h  main.cpp  timer.cpp  timer.h
